--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/javidalpe/reactive-microservices-framework/issues"
   },
-  "homepage": "https://github.com/javidalpe/reactive-microservices-framework#readme"
+  "homepage": "https://github.com/javidalpe/reactive-microservices-framework#readme",
+  "dependencies": {
+    "rxjs": "^6.3.1",
+    "rxjs-compat": "^6.3.1"
+  }
 }
